# Toy

./: .travis.yml  CMakeLists.txt  NOTES.md  README.md  build.sh
.github/workflows/: build.yml
cmake/: Packages.cmake
cmake/macros/: CXXTools.cmake  Private.cmake
src/: tri.h
src/old_tri/application/: CMakeLists.txt
src/old_tri/memory/: deallocate.h  fill.h
src/old_tri/rendering/: transformPoints.h
src/old_tri/viewport/: CMakeLists.txt  cudaGLFrameBuffer.h  lookAtTransform.h
src/programs/hostRaySphere/: CMakeLists.txt  main.cpp
src/programs/simpleImageOutput/: CMakeLists.txt  main.cpp
src/programs/simpleImageWindow/: main.cpp
src/programs/simpleRayBox/: main.cpp
src/programs/simpleRayPipeline/: CMakeLists.txt  simpleRayPipelineCuda.cpp  simpleRayPipelineHost.cpp  simpleRayPipelineWindow.h
src/programs/simpleRaySphere/: CMakeLists.txt  main.cpp
src/toy/: CMakeLists.txt  toy.h
src/toy/app/: CMakeLists.txt  window.cpp  window.h
src/toy/application/: CMakeLists.txt  cudaGLFrameBuffer.cpp  cudaGLFrameBuffer.h  mouse.h  viewportWindow.cpp  viewportWindow.h  window.cpp  window.h
src/toy/base/: bitMask.h  diagnostic.h  export.h  falseType.h  hostDevice.h  log.h  os.h  typeName.h
src/toy/base/tests/: CMakeLists.txt
src/toy/core/: CMakeLists.txt  array.h  cudaAllocator.h  diagnostic.h  export.h  log.h  os.h
src/toy/core/tests/: testHostArray.cpp
src/toy/cuda/: cudaAllocator.h  diagnostic.h
src/toy/cuda/tests/: CMakeLists.txt  testCudaArray.cpp
src/toy/engine/: rayTracingEngine.h  renderEngine.h  renderSettings.h
src/toy/imaging/: CMakeLists.txt  camera.h  convert.cpp  convert.h  cudaGLFrameBuffer.cpp  cudaGLFrameBuffer.h  dollyManipulator.h  export.cpp  export.h  extent.h  flip.h  formatConversion.cu  formatConversion.h  generateNDC.cu  generateNDC.h  lookAtTransform.h  orbitManipulator.h  perspectiveView.h  ray.h  transformPoints.cu  transformPoints.h  triMesh.h  triangleMesh.h  writeImage.cpp  writeImage.h
src/toy/imaging/tests/: CMakeLists.txt  testTransformPoints.cpp
src/toy/memory/: CMakeLists.txt  allocate.h  array.h  compare.h  copy.h  cudaAllocator.h  cudaError.h  deallocate.h  fill.h  hostAllocator.h  index.h  matrix.h  memoryCompare.h  residency.h
src/toy/memory/tests/: CMakeLists.txt  testArray.cpp  testCudaArray.cpp  testHostArray.cpp  testMatrix.cpp
src/toy/model/: camera.h  dollyManipulator.h  lookAtCamera.h  lookAtTransform.h  orbitManipulator.h  perspectiveView.h  ray.h  truckManipulator.h  userCamera.h
src/toy/present/: CMakeLists.txt  window.cpp  window.h  writeImage.cpp  writeImage.h
src/toy/rasterization/: CMakeLists.txt  rasterizationEngine.h
src/toy/raytracing/: CMakeLists.txt
src/toy/rendering/: CMakeLists.txt  camera.h  ray.h
src/toy/sceneGraph/: prim.cpp  prim.h  scene.cpp  scene.h
src/toy/scenegraph/: CMakeLists.txt  prim.cpp  scene.cpp  scene.h
src/toy/utils/: CMakeLists.txt  bitMask.h  diagnostic.h  export.h  falseType.h  hostDevice.h  log.h  os.h  typeName.h
src/toy/utils/tests/: CMakeLists.txt
src/toy/viewport/: CMakeLists.txt  cudaGLFrameBuffer.cpp  cudaGLFrameBuffer.h  dollyManipulator.h  orbitManipulator.h  truckManipulator.h
src/tri/: CMakeLists.txt  tri.cpp  tri.h
src/tri/application/: CMakeLists.txt  mouse.h  viewportWindow.cpp  viewportWindow.h  window.h
src/tri/base/: CMakeLists.txt  bitMask.h  diagnostic.h  log.h  typeName.h
src/tri/imaging/: export.cpp  export.h  extent.h  flip.h  formatConversion.h  transformPoints.h
src/tri/internal/: bufferUtils.cpp  (+14 more)
src/triLegacy/: CMakeLists.txt  tri.h
src/triView/: CMakeLists.txt  bitMask.h  cudaError.h  cudaGLFrameBuffer.cpp  cudaGLFrameBuffer.h  dollyManipulator.h  lookAtTransform.h  mouse.h  orbitManipulator.h  perspectiveView.h  rasterizeTriangle.cpp  truckManipulator.h  viewportWindow.cpp  viewportWindow.h  window.cpp  window.h
(+44 files in other folders)
